# hypr-remove-last-window-from-group

./: .gitignore  CMakeLists.txt  main.cpp
